--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -7,7 +7,7 @@
     <meta name="author" content="FixGia">
     <meta name="generator" content="FixGia">
     <title>HomePage on PayMyBuddy in Bootstrap 5.1</title>
-    <link rel="stylesheet" href="My.css" data-th-href="@{/style.css}"/>
+    <link rel="stylesheet" href="My.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -23,6 +23,7 @@
   <body class="bg-light">
 
 <div class="container">
+
   <main>
       <form th:action="@{/api/registration}" th:object="@{RegistrationRequest}" method="POST">
     <div class="py-5 text-center">
@@ -40,8 +41,9 @@
           </div>
       </div>
 
-      <label for="firstName" class="form-label">Firstname</label>
+
       <div class="col-12">
+          <label for="firstName" class="form-label">Firstname</label>
               <input type="text" class="form-control" id="firstName" placeholder="Jean" value="" required>
               <div class="invalid-feedback">
                 Valid first name is required.
@@ -54,6 +56,16 @@
                 Valid last name is required.
               </div>
             </div>
+          <div class="col-12">
+              <label for= "password" class="form-label"> Password </label>
+              <div class="input-group has-validation">
+                  <input type="password" class="form-control" id="password" placeholder="password" required>
+                  <div class="invalid-feedback">
+                      Please enter a password.
+                      Your password was required.
+                  </div>
+              </div>
+          </div>
 
             <div class="col-12" style=" margin-bottom: 100px;">
               <label for="email" class="form-label"> Email</label>
@@ -66,6 +78,9 @@
                 </div>
               </div>
             </div>
+
+
+
 
 
 
