--- a/src/main/resources/templates/Contacts.html
+++ b/src/main/resources/templates/Contacts.html
@@ -13,7 +13,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="list-groups.css" rel="stylesheet">
+  <link href="../static/css/list-groups.css" rel="stylesheet">
 </head>
 <div class="container">
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom" style="background-color: whitesmoke">
