--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -7,7 +7,7 @@
     <meta name="author" content="FixGia">
     <meta name="generator" content="FixGia">
     <title>HomePage on PayMyBuddy in Bootstrap 5.1</title>
-    <link rel="stylesheet" href="My.css"/>
+    <link rel="stylesheet" href="../static/css/My.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -122,5 +122,5 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"></script>
 
-<script src="sidebars.js"></script>
+<script src="../static/sidebars.js"></script>
 </body>
