--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -1,114 +1,104 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/html"
       xmlns:th="http://www.thymeleaf.org">
 
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
 <head>
-    <title>HomePage on PayMyBuddy in Bootstrap 5.1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--<link rel="stylesheet" href="../static/My.css"/> -->
-    <link rel="stylesheet" th:href="@{/static/css/My.css}"/>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Website CSS style -->
+    <link rel="stylesheet" href="/static/checkout.css" >
 
-    <!-- Bootstrap core CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Website Font style -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/checkout.css">
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 
-    <!-- Custom styles for this template -->
-
-    <link href="../static/css/form-validation.css" rel="stylesheet">
-
-  </head>
-
-  <body class="bg-light">
+    <title>Admin</title>
+</head>
+<body>
 
 <div class="container">
-
-  <main>
-
-    <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="/templates/Img/logoPmB.png" alt="" width="218" height="67">
-      <h2>Welcome in PayMyBuddy Application</h2>
-      <p class="lead"> Let's go to check out !  </p>
-    </div>
-
-      <form th:action="@{/api/registration}"
-            method="POST">
-
-      <div class="col-12">
+    <div class="row main">
+        <div class="main-login main-center">
 
 
-          <label for="civility" class="form-label">Civility
-          <input type="text" class="form-control" id="civility" name="civility" placeholder="Mister or Miss" required > </label>
-          <div class="invalid-feedback">
-              Please enter your civility
-          </div>
-      </div>
+            <h5>Sign up once and watch any of our free demos.</h5>
 
+            <form th:action="@{/checkout}" method="post" >
 
-      <div class="col-12">
-          <label for="firstName" class="form-label">Firstname</label>
-              <input type="text" class="form-control" id="firstName" name ="firstname" placeholder="Jean" required>
-              <div class="invalid-feedback">
-                Valid first name is required.
-              </div>
-              </div>
-
-            <div class="col-12">
-              <label for="lastName" class="form-label">Lastname</label>
-              <input type="text" class="form-control" id="lastName"  placeholder="Smith" value="" required>
-              <div class="invalid-feedback">
-                Valid last name is required.
-              </div>
-            </div>
-
-          <div class="col-12">
-              <label for= "password" class="form-label"> Password </label>
-              <div class="input-group has-validation">
-                  <input type="password" class="form-control" id="password" placeholder="password" required>
-                  <div class="invalid-feedback">
-                      Please enter a password.
-                      Your password was required.
-                  </div>
-              </div>
-          </div>
-
-            <div class="col-12" style=" margin-bottom: 100px;">
-              <label for="email" class="form-label"> Email</label>
-              <div class="input-group has-validation">
-                <input type="text" class="form-control" id="email" placeholder="Email" required>
-              <div class="invalid-feedback">
-                  Please enter a valid email address.
-                  Your email is required.
-
+                <div class="form-group">
+                    <label for="civility" class="cols-sm-2 control-label">Civility</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <input type="text" class="form-control" name="civility" id="civility"  placeholder="Enter your Civility" value="" required/>
+                        </div>
+                    </div>
                 </div>
-              </div>
 
-            </div>
+                <div class="form-group">
+                    <label for="firstname" class="cols-sm-2 control-label">Your Firstname</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                            <input type="text" class="form-control" name="firstname" id="firstname"  placeholder="Enter your firstname" value="" required/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="lastname" class="cols-sm-2 control-label">Your lastname</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                            <input type="text" class="form-control" name="lastname" id="lastname"  placeholder="Enter your lastname" value="" required/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="email" class="cols-sm-2 control-label">Your Email</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                            <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email" value="" required/>
+                        </div>
+                    </div>
+                </div>
 
 
+                <div class="form-group">
+                    <label for="password" class="cols-sm-2 control-label">Password</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                            <input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password" value="" required/>
+                        </div>
+                    </div>
+                </div>
 
 
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue your checkout</button>
-      </form>
-  </main>
+                <div class="form-group ">
+                    <input type="submit" name="register" class="btn btn-info btn-md" value="submit">
+                </div>
+            </form>
+
+
+        </div>
+    </div>
 </div>
 
-
-
-
-
-  <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mb-1">&copy;2021 PayMyBuddy Company </p>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
-    </ul>
-  </footer>
-</div>
-
-
-  </body>
-
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
+</body>
 </html>
