--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -1,5 +1,7 @@
-<!doctype html>
-<html lang="fr">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,112 +17,106 @@
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom" style="background-color: whitesmoke">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="/templates/Img/logoPmB.png">
+            <img src="/static/Img/logoPmB.png">
             <svg class="bi me-2" width="80" height="64" role="img" aria-label="Bootstrap"><use xlink:href="#PayMyBuddy"/></svg> </img>
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Contacts</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Profile</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Transactions</a></li>
+            <li sec:authorize="isAuthenticated()" ><a href="#" th:href="@{/Home}" class="nav-link px-2 link-secondary">Home</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Contacts}" class="nav-link px-2 link-dark">Contacts</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Profile}"class="nav-link px-2 link-dark">Profile</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="#"th:href="@{/Transactions}" class="nav-link px-2 link-dark">Transactions</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Login</button>
-            <button type="button" class="btn btn-primary">Logout</button>
-            <button type="button" class="btn btn-primary">Sign-up</button>
+            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/logout}">
+                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout</button>
+                <button sec:authorize="isAnonymous()" th:href="@{/login}" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">Login</button>
+            </form>
         </div>
     </header>
     <div class="b-example-divider" style=" margin-bottom: 100px;"> </div>
 </div>
 <body>
 
-<div>
-    <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="width: 1000px; border-style: double; margin: auto;">
-        <table class="table table-striped" style="margin: auto;" >
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Selected Contact</th>
-                <th scope="col">Amount</th>
-                <th scope="col"> Description </th>
-                <th scope="col" style="align-items: center"> Transaction Made </th>
-                <th scope="col"> date </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">1
-                <td>Mark</td>
-                <td> 100 </td>
-                <td> description Transaction </td>
-                <td><button type="button" class="btn btn-primary btn-lg" style="align-items: center;">Make Transaction</button> </td>
-                <td> local.datetime</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+<div class="consTrans3">
+    <table class="table">
+        <thead>
+        <h2> Transfer With Bank Account</h2>
+        <tr class="panel-th" >
+            <th width="30%"  style="font-style:italic; font-size:14px; color:#707070; ">Amount</th>
+            <th width="50%" style="font-style:italic; font-size:14px; color:#707070; ">Credit</th>
+            <th width="20%" style="font-style:italic; font-size:14px; color:#707070; ">Debit</th>
+            <th width="20%" style="font-style:italic; font-size:14px; color:#707070; ">Description</th>
+        </thead>
+        </tr>
+        <tbody>
+        <tr th:each ="transfer : ${ transfers}">
+            <td th:utext="${transfer.amount}">...</td>
+            <td th:utext="${transfer.credit}">...</td>
+            <td th:utext="${transfer.debit}">...</td>
+            <td th:utext="${transfer.description}">...</td>
+            <td>
+                <p class="text-right m-0"> <a class="btn btn-danger" onclick="return confirm( 'Do you really want to delete this transfer?')"
+                                              th:href="@{/deleteTransfer(id=${transfer.id})}">Delete</a><i class="far fa-user"></i></p>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="width: 1000px; border-style: double; margin: auto;">
-    <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
-        <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-        <span class="fs-5 fw-semibold">List Contact</span>
-    </a>
-    <div class="list-group list-group-flush border-bottom scrollarea">
-        <a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
-            <div class="d-flex w-100 align-items-center justify-content-between">
-                <strong class="mb-1">List group item heading</strong>
-                <small>Wed</small>
-            </div>
-            <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-        </a>
-        <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-            <div class="d-flex w-100 align-items-center justify-content-between">
-                <strong class="mb-1">List group item heading</strong>
-                <small class="text-muted">Tues</small>
-            </div>
-            <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-        </a>
-        <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-            <div class="d-flex w-100 align-items-center justify-content-between">
-                <strong class="mb-1">List group item heading</strong>
-                <small class="text-muted">Mon</small>
-            </div>
-            <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-        </a>
 
-        <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-            <div class="d-flex w-100 align-items-center justify-content-between">
-                <strong class="mb-1">List group item heading</strong>
-                <small class="text-muted">Wed</small>
-            </div>
-
-            <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>
-        </a>
-        <div class="bd-example ">
-            <nav aria-label="Standard pagination example">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-    </div>
+<div class="consTrans3">
+    <table class="table">
+        <thead>
+        <h4> Transaction With Your Contact</h4>
+        <h5> You are Beneficiary </h5>
+        <tr class="panel-th" >
+            <th width="30%"  style="font-style:italic; font-size:14px; color:#707070; ">Amount</th>
+            <th width="50%" style="font-style:italic; font-size:14px; color:#707070; ">Beneficiary</th>
+            <th width="20%" style="font-style:italic; font-size:14px; color:#707070; ">Payer</th>
+            <th width="20%" style="font-style:italic; font-size:14px; color:#707070; ">Description</th>
+            <th ></th>
+        </thead>
+        </tr>
+        <tbody>
+        <tr th:each ="transaction : ${ BeneficiaryTransactions}">
+            <td th:utext="${transaction.amount}">...</td>
+            <td th:utext="${transaction.beneficiary.firstname+' '+transaction.beneficiary.lastname}">...</td>
+            <td th:utext="${transaction.payer.firstname+' '+transaction.payer.lastname}">...</td>
+            <td th:utext="${transaction.description}">...</td>
+            <td>
+                <p class="text-right m-0"> <a class="btn btn-danger" onclick="return confirm( 'Do you really want to delete this transaction?')"
+                                              th:href="@{/deleteTransaction(id=${transaction.id})}">Delete</a><i class="far fa-user"></i></p>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"></script>
-
-<script src="../static/sidebars.js"></script>
+<div class="consTrans3">
+    <table class="table">
+        <thead>
+        <h4> Transaction With Your Contact</h4>
+        <h5> You are Payer </h5>
+        <tr class="panel-th" >
+            <th width="30%"  style="font-style:italic; font-size:14px; color:#707070; ">Amount</th>
+            <th width="50%" style="font-style:italic; font-size:14px; color:#707070; ">Beneficiary</th>
+            <th width="20%" style="font-style:italic; font-size:14px; color:#707070; ">Payer</th>
+            <th width="20%" style="font-style:italic; font-size:14px; color:#707070; ">Description</th>
+            <th ></th>
+        </thead>
+        </tr>
+        <tbody>
+        <tr th:each ="transaction : ${ PayerTransactions}">
+            <td th:utext="${transaction.amount}">...</td>
+            <td th:utext="${transaction.beneficiary.firstname+' '+transaction.beneficiary.lastname}">...</td>
+            <td th:utext="${transaction.payer.firstname+' '+transaction.payer.lastname}">...</td>
+            <td th:utext="${transaction.description}">...</td>
+            <td>
+                <p class="text-right m-0"> <a class="btn btn-danger" onclick="return confirm( 'Do you really want to delete this transaction?')"
+                                              th:href="@{/deleteTransaction(id=${transaction.id})}">Delete</a><i class="far fa-user"></i></p>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
