--- a/src/main/resources/templates/DebitYourWallet.html
+++ b/src/main/resources/templates/DebitYourWallet.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <title>Debit Your Wallet</title>
+
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="/static/css/checkout.css" >
+  <link rel="stylesheet" type="text/css" th:href="@{/css/checkout.css}">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link th:href="@{//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css}">
+  <link rel="stylesheet" th:href="@{//maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css}">
+  <!------ Include the above in your HEAD tag ---------->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
-<h4 class="mb-3">Debit Your Wallet</h4>
-
+</br></br></br></br></br></br></br></br>
+<h1 class="mb-3 text-center text-info">Debit Your Wallet</h1>
+</br>
+<div class="main-login main-center text-center text-info">
 <form th:action="@{/transfer/debit}" method="post" >
   <div class="form-group">
     <label for="Amount" class="cols-sm-2 control-label">Amount</label>
@@ -18,19 +31,30 @@
       </div>
     </div>
   </div>
-
+  </br>
   <div class="form-group">
-    <label for="description" class="cols-sm-2 control-label">Your Amount</label>
+    <label for="description" class="cols-sm-2 control-label">Your Description</label>
     <div class="cols-sm-10">
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-        <input type="number" class="form-control" name="description" id="description"  placeholder="Enter your description" value="" required/>
+        <input type="text" class="form-control" name="description" id="description"  placeholder="Enter your description, max: 80 characters" value="" required/>
       </div>
     </div>
   </div>
+  </br>
   <div class="form-group ">
-    <input type="submit" name="register" class="btn btn-info btn-md" value="credit" onclick="return confirm( 'Do you really want to credit your wallet with this amount?')">
+    <input type="submit" name="register" class="btn btn-info btn-md" value="DEBIT" onclick="return confirm( 'Do you really want to debit your wallet with this amount?')">
   </div>
 </form>
+</div>
 </body>
+</br>
+<footer class="my-5 pt-5 text-muted text-center text-small">
+  <p class="mb-1">&copy;2021 PayMyBuddy Company </p>
+  <ul class="list-inline">
+    <li class="list-inline-item"><a href="#">Privacy</a></li>
+    <li class="list-inline-item"><a href="#">Terms</a></li>
+    <li class="list-inline-item"><a href="#">Support</a></li>
+  </ul>
+</footer>
 </html>
