--- a/src/main/resources/templates/FormBankAccount.html
+++ b/src/main/resources/templates/FormBankAccount.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>FormBankAccount</title>
-</head>
-<body>
-<h4 class="mb-3">Add BankAccount</h4>
+    <title>Add BankAccount</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/css/checkout.css" >
+    <link rel="stylesheet" type="text/css" th:href="@{/css/checkout.css}">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link th:href="@{//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{//maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css}">
+    <!------ Include the above in your HEAD tag ---------->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+</head>
+
+<body>
+</br></br></br></br></br></br></br></br>
+<h4 class="mb-3 text-center text-info">Add BankAccount</h4>
+</br>
+<div class="main-login main-center text-center text-info">
 <form th:action="@{/addBankAccount}" method="post" >
     <div class="form-group">
         <label for="Iban" class="cols-sm-2 control-label">Iban</label>
@@ -29,8 +42,18 @@
         </div>
     </div>
     <div class="form-group ">
-        <input type="submit" name="register" class="btn btn-info btn-md" value="update">
+        <input type="submit" name="register" class="btn btn-info btn-md" value="UPDATE" onclick="return confirm('Are you sure to link BankAccount To User? ')">
     </div>
 </form>
+</div>
 </body>
+</br></br>
+<footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy;2021 PayMyBuddy Company </p>
+    <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Privacy</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Support</a></li>
+    </ul>
+</footer>
 </html>
