--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>List groups · Bootstrap v5.1</title>
+    <title> Home </title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,9 +15,8 @@
 
 
 
-
     <!-- Custom styles for this template -->
-    <link href="../static/css/list-groups.css" rel="stylesheet">
+
 </head>
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom" style="background-color: whitesmoke">
@@ -30,7 +29,7 @@
             <li sec:authorize="isAuthenticated()" ><a href="#" th:href="@{/Home}" class="nav-link px-2 link-secondary">Home</a></li>
             <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Contacts}" class="nav-link px-2 link-dark">Contacts</a></li>
             <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Profile}"class="nav-link px-2 link-dark">Profile</a></li>
-            <li sec:authorize="isAuthenticated()"><a href="#"th:href="@{/Transactions}" class="nav-link px-2 link-dark">Transactions</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="#"th:href="@{/Transaction}" class="nav-link px-2 link-dark">Transactions</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -40,59 +39,49 @@
             </form>
         </div>
     </header>
-
-    <div class="b-example-divider"></div>
 </div>
 <body>
 
-<h1 class="visually-hidden">Features examples</h1>
 
 <div class="container px-4 py-5" id="featured-3">
-    <h2 class="pb-2 border-bottom">Welcome to PayMyBuddy Application</h2>
-    <p> Welcome user, </br>
+    <h2 class="text-center text-info" >PayMyBuddy Application</h2>
+    <h5 class="text-center text-info" th:text="${'Welcome'+currentUser.firstname+currentUser.lastname}">  </br>
     Our application is great and believe me or not but now you can payback your det. </br>
         Our application is great and believe me or not but now you can payback your det. </br>
         Our application is great and believe me or not but now you can payback your det. </br>
         Our application is great and believe me or not but now you can payback your det. </br>
-    </p>
+    </h5>
+    </br></br></br>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="feature col">
             <div class="feature-icon bg-primary bg-gradient">
                 <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
             </div>
-            <h2>Transaction</h2>
-            <p>Make a transaction. Pay one of yours contacts</p>
-            <a href="#" class="icon-link" th:href="@{/Transaction}">
-                Go to transaction page
-                <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
-            </a>
+            <h2 class="text-center"><a href="#" th:href="@{/Transaction}" class="text-info"> Display Transaction </a></h2>
+            </br>
+            <h2 class=" text-center"> <a  href="#" th:href="@{/FormTransaction}" class="text-info">Make a transaction. Pay one of yours contacts </a> </h2>
         </div>
         <div class="feature col">
             <div class="feature-icon bg-primary bg-gradient">
                 <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
             </div>
-            <h2>Profil</h2>
-            <p>Check your profil , update it or add some informations </p>
-            <a href="#" class="icon-link" th:href="@{/Profile}">
-                Go to Profil page
-                <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
-            </a>
+            <h2 class="text-center" > <a href="#" th:href="@{/Profile}" class="text-info"> Profile </a></h2>
+            </br></br>
+
+            <h2 class="text-info text-center"> <a href="#" th:href="@{/BankAccount}" class="text-info"> Add BankAccount ! </a> </h2>
+
         </div>
         <div class="feature col">
             <div class="feature-icon bg-primary bg-gradient">
                 <svg class="bi" width="1em" height="1em"> <use xlink:href="#toggles2"/></svg>
             </div>
-            <h2>Contact </h2>
-            <p> Check your contact, add a new friend or delete bad one. Payback or not.
+            <h2  class="text-center"><a href="#" th:href="@{/Contacts}" class="text-info">Contact </a></h2>
+            </br>
+            <p class="text-info text-center"> Check your contact, add a new friend or delete bad one. Payback or not.
                 </br>Make your choice.</p>
-            <a href="#" class="icon-link"th:href="@{/Contacts}">
-               Go to Contact page
-                <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
-            </a>
         </div>
     </div>
 </div>
-
 
 <footer class="my-5 pt-5 text-muted text-center text-small">
     <p class="mb-1">&copy;2021 PayMyBuddy Company </p>
