--- a/src/main/resources/templates/Profile.html
+++ b/src/main/resources/templates/Profile.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>PayMyBuddy Profile Page</title>
+    <title class="text-center">PayMyBuddy Profile </title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -31,7 +31,7 @@
             <li sec:authorize="isAuthenticated()" ><a href="#" th:href="@{/Home}" class="nav-link px-2 link-secondary">Home</a></li>
             <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Contacts}" class="nav-link px-2 link-dark">Contacts</a></li>
             <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Profile}"class="nav-link px-2 link-dark">Profile</a></li>
-            <li sec:authorize="isAuthenticated()"><a href="#"th:href="@{/Transactions}" class="nav-link px-2 link-dark">Transactions</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="#"th:href="@{/Transaction}" class="nav-link px-2 link-dark">Transactions</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -76,11 +76,14 @@
                 <input type="text"  readonly="readonly" class="form-control" id="wallet" name="wallet" th:value="${userEntity.wallet}" size="20" maxlength="60" />
             </div>
 
-            </br></br></br></br>
-            <link sec:authorize="isAuthenticated()"><a href="#" th:href="@{/transfer/credit}" class="nav-link px-2 link-secondary">Credit your Wallet</a></link>
-            <link sec:authorize="isAuthenticated()"><a href="#" th:href="@{/transfer/debit}" class="nav-link px-2 link-secondary">Debit your Wallet</a></link>
-            <link sec:authorize="isAuthenticated()"><a href="#" th:href="@{/UpdateProfile}" class="nav-link px-2 link-secondary">Update</a></link>
-            <link sec:authorize="isAuthenticated()"><a href="#" th:href="@{/BankAccount}" class="nav-link px-2 link-secondary">Add BankAccount</a></link>
+            </br></br>
+            <link sec:authorize="isAuthenticated()"><a href="#" th:href="@{/transfer/credit}" class="btn btn-info btn-md">Credit your Wallet</a></link>
+
+            <link sec:authorize="isAuthenticated()"><a href="#" style=margin-left:20px th:href="@{/transfer/debit}" class="btn btn-info btn-md ">Debit your Wallet</a></link>
+
+            <link sec:authorize="isAuthenticated()"><a href="#" style=margin-left:100px th:href="@{/UpdateProfile}" class="btn btn-info btn-md">Update Profile</a></link>
+
+            <link sec:authorize="isAuthenticated()"><a href="#" style=margin-left:100px th:href="@{/BankAccount}" class="btn btn-info btn-md">Add BankAccount</a></link>
         </fieldset>
     </form>
 </div>
