--- a/src/main/resources/templates/UpdateProfile.html
+++ b/src/main/resources/templates/UpdateProfile.html
@@ -3,53 +3,28 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>PayMyBuddy Profile Page</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
-
-    <!-- Bootstrap core CSS -->
-
-
-
-
-    <!-- Custom styles for this template -->
-    <link href="../static/css/list-groups.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Update Your Profile</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/css/checkout.css" >
+    <link rel="stylesheet" type="text/css" th:href="@{/css/checkout.css}">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link th:href="@{//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{//maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css}">
+    <!------ Include the above in your HEAD tag ---------->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<div class="container">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom" style="background-color: whitesmoke">
-        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="/static/Img/logoPmB.png">
-            <svg class="bi me-2" width="80" height="64" role="img" aria-label="Bootstrap"><use xlink:href="#PayMyBuddy"/></svg> </img>
-        </a>
 
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li sec:authorize="isAuthenticated()" ><a href="#" th:href="@{/Home}" class="nav-link px-2 link-secondary">Home</a></li>
-            <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Contacts}" class="nav-link px-2 link-dark">Contacts</a></li>
-            <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Profile}"class="nav-link px-2 link-dark">Profile</a></li>
-            <li sec:authorize="isAuthenticated()"><a href="#"th:href="@{/Transactions}" class="nav-link px-2 link-dark">Transactions</a></li>
-        </ul>
-
-        <div class="col-md-3 text-end">
-            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/logout}">
-                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout</button>
-                <button sec:authorize="isAnonymous()" th:href="@{/login}" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">Login</button>
-            </form>
-        </div>
-    </header>
-
+    </br></br></br></br></br></br>
     <body>
-
+    <div class="main-login main-center text-center text-info">
     <!------ Include the above in your HEAD tag ---------->
     <form th:action="@{/Profile/update}" method="post" >
 
 
         <div class="form-group">
             <label for="firstname" class="cols-sm-2 control-label">Your Firstname</label>
+
             <div class="cols-sm-10">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
@@ -60,6 +35,7 @@
 
         <div class="form-group">
             <label for="lastname" class="cols-sm-2 control-label">Your lastname</label>
+
             <div class="cols-sm-10">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
@@ -70,6 +46,7 @@
 
         <div class="form-group">
             <label for="email" class="cols-sm-2 control-label">Your Email</label>
+
             <div class="cols-sm-10">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
@@ -79,12 +56,14 @@
         </div>
 
 
+        </br></br>
         <div class="form-group ">
-            <input type="submit" name="register" class="btn btn-info btn-md" value="update">
+            <input type="submit" name="register" class="btn btn-info btn-md" value="update" onclick="return confirm(' Are you sure to update Your Profile?')">
         </div>
     </form>
-
+    </div>
     </body>
+
     <footer class="my-5 pt-5 text-muted text-center text-small">
         <p class="mb-1">&copy;2021 PayMyBuddy Company </p>
         <ul class="list-inline">
