--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="FixGia">
     <meta name="generator" content="FixGia">
-    <title>HomePage on PayMyBuddy in Bootstrap 5.1</title>
+    <title> Transactions </title>
     <link rel="stylesheet" href="../static/css/My.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -25,7 +25,7 @@
             <li sec:authorize="isAuthenticated()" ><a href="#" th:href="@{/Home}" class="nav-link px-2 link-secondary">Home</a></li>
             <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Contacts}" class="nav-link px-2 link-dark">Contacts</a></li>
             <li sec:authorize="isAuthenticated()"><a href="#" th:href="@{/Profile}"class="nav-link px-2 link-dark">Profile</a></li>
-            <li sec:authorize="isAuthenticated()"><a href="#"th:href="@{/Transactions}" class="nav-link px-2 link-dark">Transactions</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="#"th:href="@{/Transaction}" class="nav-link px-2 link-dark">Transactions</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -120,3 +120,11 @@
     </table>
 </div>
 </body>
+<footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy;2021 PayMyBuddy Company </p>
+    <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Privacy</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Support</a></li>
+    </ul>
+</footer>
