--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="form-group">
               <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-              <input type="submit" name="submit" class="btn btn-info btn-md" value="Login">
+              <input type="submit" name="submit" class="btn btn-info btn-md" value="Login" th:href="@{/Home}">
               <a href="#"  sec:authorize="isAnonymous()" th:href="@{/checkout}" style="margin-left:325px" class="text-info">Register here</a>
             </div>
 
